{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 38,
  "lineage": "21145b0f-b60f-2aad-af43-cb31924965e7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414433653723:route-table/rtb-05f98ce69fdfed8ad",
            "default_route_table_id": "rtb-05f98ce69fdfed8ad",
            "id": "rtb-05f98ce69fdfed8ad",
            "owner_id": "414433653723",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd4d7700e2c104b9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "duckduckgo-vpc-rt"
            },
            "tags_all": {
              "Name": "duckduckgo-vpc-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0caec834ebaed6d21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "neo-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414433653723:security-group/sg-0a31568c920708ea5",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a31568c920708ea5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "414433653723",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "duckduckgo-neo-security-group"
            },
            "tags_all": {
              "Name": "duckduckgo-neo-security-group"
            },
            "vpc_id": "vpc-0caec834ebaed6d21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "neo-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:414433653723:instance/i-04b945ce5fd177460",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04b945ce5fd177460",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "xps-add",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d65443daded89c81",
            "private_dns": "ip-10-0-1-134.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04378d48810e6b267",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0acc65f6a66afbe8e",
            "tags": {
              "Name": "duckduckgo-neo-server-1"
            },
            "tags_all": {
              "Name": "duckduckgo-neo-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a31568c920708ea5"
            ]
          },
          "dependencies": [
            "aws_default_security_group.neo-security-group",
            "aws_subnet.subnet-1",
            "aws_vpc.vpc",
            "data.template_file.user_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "neo-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:414433653723:instance/i-06bba68ee481f2447",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06bba68ee481f2447",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "xps-add",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dd20e14f4f42b5d7",
            "private_dns": "ip-10-0-2-225.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ae33f24a15c5d430",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c845269221f42423",
            "tags": {
              "Name": "duckduckgo-neo-server-2"
            },
            "tags_all": {
              "Name": "duckduckgo-neo-server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a31568c920708ea5"
            ]
          },
          "dependencies": [
            "aws_default_security_group.neo-security-group",
            "aws_subnet.subnet-2",
            "aws_vpc.vpc",
            "data.template_file.user_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414433653723:internet-gateway/igw-0bd4d7700e2c104b9",
            "id": "igw-0bd4d7700e2c104b9",
            "owner_id": "414433653723",
            "tags": {
              "Name": "duckduckgo-vpc-gw"
            },
            "tags_all": {
              "Name": "duckduckgo-vpc-gw"
            },
            "vpc_id": "vpc-0caec834ebaed6d21"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414433653723:loadbalancer/net/duckduckgo-lb/ab8286735d13e50f",
            "arn_suffix": "net/duckduckgo-lb/ab8286735d13e50f",
            "dns_name": "duckduckgo-lb-ab8286735d13e50f.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:414433653723:loadbalancer/net/duckduckgo-lb/ab8286735d13e50f",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "duckduckgo-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09a9e0837dde61eda"
              },
              {
                "subnet_id": "subnet-0acc65f6a66afbe8e"
              },
              {
                "subnet_id": "subnet-0c845269221f42423"
              }
            ],
            "subnets": [
              "subnet-09a9e0837dde61eda",
              "subnet-0acc65f6a66afbe8e",
              "subnet-0c845269221f42423"
            ],
            "tags": {
              "Name": "duckduckgo-lb"
            },
            "tags_all": {
              "Name": "duckduckgo-lb"
            },
            "vpc_id": "vpc-0caec834ebaed6d21",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_subnet.subnet-3",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414433653723:listener/net/duckduckgo-lb/ab8286735d13e50f/d79e8f57c526ba98",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:414433653723:targetgroup/duckduckgo-lb-target-group/438ba737b3bd0990",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:414433653723:listener/net/duckduckgo-lb/ab8286735d13e50f/d79e8f57c526ba98",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:414433653723:loadbalancer/net/duckduckgo-lb/ab8286735d13e50f",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb",
            "aws_lb_target_group.lb",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_subnet.subnet-3",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414433653723:targetgroup/duckduckgo-lb-target-group/438ba737b3bd0990",
            "arn_suffix": "targetgroup/duckduckgo-lb-target-group/438ba737b3bd0990",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:414433653723:targetgroup/duckduckgo-lb-target-group/438ba737b3bd0990",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "name": "duckduckgo-lb-target-group",
            "port": 8080,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0caec834ebaed6d21"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:414433653723:targetgroup/duckduckgo-lb-target-group/438ba737b3bd0990-20230121063041588700000004",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:414433653723:targetgroup/duckduckgo-lb-target-group/438ba737b3bd0990",
            "target_id": "i-04b945ce5fd177460"
          },
          "dependencies": [
            "aws_default_security_group.neo-security-group",
            "aws_instance.neo-1",
            "aws_lb_target_group.lb",
            "aws_subnet.subnet-1",
            "aws_vpc.vpc",
            "data.template_file.user_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:414433653723:targetgroup/duckduckgo-lb-target-group/438ba737b3bd0990-20230121063031327200000003",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:414433653723:targetgroup/duckduckgo-lb-target-group/438ba737b3bd0990",
            "target_id": "i-06bba68ee481f2447"
          },
          "dependencies": [
            "aws_default_security_group.neo-security-group",
            "aws_instance.neo-2",
            "aws_lb_target_group.lb",
            "aws_subnet.subnet-2",
            "aws_vpc.vpc",
            "data.template_file.user_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad646f8060b43f08",
            "route_table_id": "rtb-05f98ce69fdfed8ad",
            "subnet_id": "subnet-0acc65f6a66afbe8e"
          },
          "dependencies": [
            "aws_subnet.subnet-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0578e2070d1abaef3",
            "route_table_id": "rtb-05f98ce69fdfed8ad",
            "subnet_id": "subnet-0c845269221f42423"
          },
          "dependencies": [
            "aws_subnet.subnet-2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa1030cd0c0f3938",
            "route_table_id": "rtb-05f98ce69fdfed8ad",
            "subnet_id": "subnet-09a9e0837dde61eda"
          },
          "dependencies": [
            "aws_subnet.subnet-3",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414433653723:subnet/subnet-0acc65f6a66afbe8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0acc65f6a66afbe8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "414433653723",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "duckduckgo-vpc-subnet-1"
            },
            "tags_all": {
              "Name": "duckduckgo-vpc-subnet-1"
            },
            "vpc_id": "vpc-0caec834ebaed6d21"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414433653723:subnet/subnet-0c845269221f42423",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c845269221f42423",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "414433653723",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "duckduckgo-vpc-subnet-2"
            },
            "tags_all": {
              "Name": "duckduckgo-vpc-subnet-2"
            },
            "vpc_id": "vpc-0caec834ebaed6d21"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414433653723:subnet/subnet-09a9e0837dde61eda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a9e0837dde61eda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "414433653723",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "duckduckgo-vpc-subnet-3"
            },
            "tags_all": {
              "Name": "duckduckgo-vpc-subnet-3"
            },
            "vpc_id": "vpc-0caec834ebaed6d21"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414433653723:vpc/vpc-0caec834ebaed6d21",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d022af5a0372b2bb",
            "default_route_table_id": "rtb-05f98ce69fdfed8ad",
            "default_security_group_id": "sg-0a31568c920708ea5",
            "dhcp_options_id": "dopt-0a25b1fb012bcaa24",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0caec834ebaed6d21",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05f98ce69fdfed8ad",
            "owner_id": "414433653723",
            "tags": {
              "Name": "duckduckgo-vpc"
            },
            "tags_all": {
              "Name": "duckduckgo-vpc"
            }
          }
        }
      ]
    }
  ]
}